# bus_spotting

./: .gitignore  Cargo.toml  README.md  design.md  dev.md  index.html  package.json  run_locally.sh  ui.d.ts  ui.js  ui_bg.wasm  ui_bg.wasm.d.ts  user_guide.md
.github/workflows/: web.yml
docs/: matching.md
gtfs/: Cargo.toml
gtfs/src/: calendar.rs  ids.rs  lib.rs  routes.rs  shapes.rs  snap.rs  stop_times.rs  stops.rs  trips.rs
model/: Cargo.toml
model/src/: avl.rs  boarding.rs  lib.rs  multiday.rs  segment.rs  ticketing.rs  timetable.rs  trajectory.rs
model/src/assemble/: boarding.rs  by_avl.rs  gtfs_trajectories.rs  mod.rs  segment.rs  supply_demand.rs  to_trips.rs  vehicle_to_routes.rs
model/src/experiments/: bil_trajectory.rs  by_pos_at_time.rs  debug_manually.rs  gtfs_trajectories.rs  match_by_ticketing.rs  mod.rs  split_avl.rs  supply_demand.rs
model/src/gtfs/: calendar.rs  ids.rs  mod.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  trips.rs
src/: avl.rs  main.rs  model.rs  speed.rs  trajectory.rs
src/model/: avl.rs  mod.rs  trajectory.rs
src/model/gtfs/: mod.rs  stops.rs
ui/: Cargo.toml  index.html
ui/src/: bus_replay.rs  file_loader.rs  gtfs.rs  lib.rs  main.rs  speed.rs  trajectories.rs  viewer.rs
ui/src/components/: date_filter.rs  describe.rs  main_menu.rs  mod.rs  render_table.rs  speed.rs
ui/src/daily/: mod.rs  replay.rs  stop.rs  vehicle_route.rs
ui/src/multiday/: analysis.rs  filters.rs  mod.rs  viewer.rs
ui/src/network/: filters.rs  mod.rs  search.rs  stop.rs  variant.rs  viewer.rs
ui/src/replay/: events.rs  mod.rs  page.rs  replay.rs  speed.rs  stop.rs  trajectories.rs  variant.rs  vehicle_route.rs
ui/src/stop/: mod.rs
