[package]
name = "bus_spotting"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[features]
default = ["widgetry/native-backend"]

[dependencies]
anyhow = "1.0.38"
abstutil = { git = "https://github.com/dabreegster/abstreet" }
chrono = "0.4.19"
csv = "1.1.4"
geom = { git = "https://github.com/dabreegster/abstreet" }
serde = "1.0.123"
widgetry = { git = "https://github.com/dabreegster/abstreet" }

[patch.crates-io]
# Waiting for a release: https://github.com/21re/rust-geo-booleanop/pull/27
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
