[workspace]
members = ["gtfs", "model", "ui"]

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies as release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3

# To temporarily work on dependencies locally, uncomment this
#[patch."https://github.com/a-b-street/abstreet"]
#abstutil = { path = "/home/dabreegster/abstreet/abstutil" }
#geom = { path = "/home/dabreegster/abstreet/geom" }
#widgetry = { path = "/home/dabreegster/abstreet/widgetry" }
