[package]
name = "ui"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["widgetry/native-backend"]
wasm = ["wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
anyhow = "1.0.38"
abstio = { git = "https://github.com/dabreegster/abstreet" }
abstutil = { git = "https://github.com/dabreegster/abstreet" }
futures-channel = { version = "0.3.12"}
geom = { git = "https://github.com/dabreegster/abstreet" }
log = "0.4.14"
model = { path = "../model" }
rfd = "0.8.0"
structopt = "0.3.23"
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { git = "https://github.com/dabreegster/abstreet" }
