[package]
name = "ui"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["widgetry/native-backend"]
wasm = ["wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
anyhow = "1.0.38"
abstio = { git = "https://github.com/a-b-street/abstreet" }
abstutil = { git = "https://github.com/a-b-street/abstreet" }
base64 = "0.13.0"
chrono = { version = "0.4.19", features=["serde"] }
colorous = "1.0.3"
futures-channel = { version = "0.3.12"}
geom = { git = "https://github.com/a-b-street/abstreet" }
gtfs = { path = "../gtfs" }
log = "0.4.14"
model = { path = "../model" }
rfd = "0.8.0"
serde = "1.0.123"
street_network = { git = "https://github.com/a-b-street/osm2streets" }
structopt = "0.3.23"
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { git = "https://github.com/a-b-street/abstreet" }
fs-err = "2.7.0"
